chore(repo): rename Camunda BPM Platform to Camunda Platform
Related to CAM-12950

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Camunda BPM + Spring Boot in Seconds"
+      content="Camunda Platform + Spring Boot in Seconds"
     />
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,7 +20,7 @@
       gtag('config', 'UA-147197905-1');
     </script>
 
-    <title>Camunda BPM Initializr</title>
+    <title>Camunda Platform Initializr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
