chore(frontend): allow to use Java 11 to 21

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Camunda Automation Platform 7 + Spring Boot in Seconds"
+      content="Camunda 7 + Spring Boot in Seconds"
     />
 
-    <title>Camunda Automation Platform 7 Initializr</title>
+    <title>Camunda 7 Initializr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
